--- a/src/html/02.html
+++ b/src/html/02.html
@@ -6,41 +6,51 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>테스트</h1>
     <script>
-      // function solution(s) {
-      //   let answer = true;
-      //   let num1 = 0;
-      //   let num2 = 0;
-      //   s = s.toUpperCase();
-
-      //   for (let i = 0; i < s.length; i++) {
-      //     // 돌리면서 s 받은 문자열 중에서 p와 y 단어 개수가 일치하면 true 아니면 false
-      //     // 대소문자 신경X
-      //     if (s[i] === 'P') num1++;
-      //     if (s[i] === 'Y') num2++;
+      // class HttpError extends Error {
+      //   constructor(response) {
+      //     super(`${response.status} for ${response.url}`);
+      //     this.name = 'HttpError';
+      //     this.response = response;
       //   }
-      //   console.log(num1, num2);
+      // }
 
-      //   if (num1 === num2) {
-      //     return answer;
+      // async function loadJson(url) {
+      //   let response = await fetch(url);
+
+      //   if (response.status == 200) {
+      //     return response.json();
       //   } else {
-      //     return (answer = false);
+      //     throw new HttpError(response);
       //   }
       // }
-      // function solution(s) {
-      //   var result = true;
-      //   s = s.toUpperCase();
-      //   var num = 0;
-      //   for (var i = 0; i < s.length; i++) {
-      //     if (s[i] === 'P') num++; // p이면 갯수 더하기
-      //     if (s[i] === 'Y') num--; // y이면 갯수 빼기
-      //   }
-      //   result = num === 0; // p, y 갯수가 같으면 0 (p가 많으면 양수, 반대 음수)
 
-      //   return result;
+      // async function narutoIsNotOtaku() {
+      //   let title = prompt('애니메이션 제목을 입력하세요.', 'naruto');
+      //   while (true) {
+      //     try {
+      //       let res = await loadJson(
+      //         `https://animechan.vercel.app/api/random/anime?title=${title}`,
+      //       );
+      //       break;
+      //     } catch (err) {
+      //       if (err instanceof HttpError && err.response.status == 404) {
+      //         alert(
+      //           '일치하는 애니메이션이 없습니다. 일반인이시면 naruto, onepiece 정도나 입력해주세요!',
+      //         );
+      //         // return narutoIsNotOtaku();
+      //       } else {
+      //         throw err;
+      //       }
+      //     }
+      //   }
+      //   alert(`${res.character}: ${res.quote}.`);
+      //   return res;
       // }
 
-      // console.log(solution('ppyy'));
+      // narutoIsNotOtaku();
     </script>
+    <script src="../js/quiz/async-refactoring.js"></script>
   </body>
 </html>
